--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "redux": "^3.5.2",
+    "redux-form": "^6.4.3",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0"
   },
