--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.0.0",
   "description": "Hikes UI",
   "scripts": {
-    "clean": "rimraf dist",
+    "clean": "rimraf build",
+    "test": "npm run clean && karma start",
+    "watch:test": "npm test -- --auto-watch --no-single-run",
     "start": "babel-node devServer.js",
     "lint": "eslint src",
     "build": "npm run clean && webpack"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/chekalin/hikes-ui.git"
+    "url": "https://github.com/HikesApp/hikes-ui.git"
   },
   "license": "MIT",
   "dependencies": {
@@ -32,6 +34,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.3.13",
+    "chai": "^3.5.0",
     "eslint": "^2.9.0",
     "eslint-config-airbnb": "^8.0.0",
     "eslint-plugin-import": "^1.6.1",
@@ -39,7 +42,19 @@
     "eslint-plugin-react": "^5.0.1",
     "express": "^4.13.3",
     "html-webpack-plugin": "^2.26.0",
+    "karma": "^1.4.0",
+    "karma-chai": "^0.1.0",
+    "karma-junit-reporter": "^1.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sinon": "^1.0.5",
+    "karma-webpack": "^2.0.1",
+    "mocha": "^3.2.0",
+    "phantomjs": "^2.1.7",
+    "promise-polyfill": "^6.0.2",
     "rimraf": "^2.5.4",
+    "sinon": "^1.17.7",
+    "sinon-chai": "^2.8.0",
     "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.2.0"
   }
