--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "karma-sinon": "^1.0.5",
     "karma-webpack": "^2.0.1",
     "mocha": "^3.2.0",
-    "phantomjs": "^2.1.7",
+    "phantomjs-prebuilt": "^2.1.14",
     "promise-polyfill": "^6.0.2",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.7",
