--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-cli": "^6.7.7",
     "babel-core": "^6.3.15",
     "babel-loader": "^6.2.0",
+    "babel-plugin-__coverage__": "^11.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
@@ -44,6 +45,7 @@
     "html-webpack-plugin": "^2.26.0",
     "karma": "^1.4.0",
     "karma-chai": "^0.1.0",
+    "karma-coverage": "^1.1.1",
     "karma-junit-reporter": "^1.2.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
@@ -55,7 +57,7 @@
     "rimraf": "^2.5.4",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
-    "webpack": "^1.14.0",
+    "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.2.0"
   }
 }
