--- a/shippable.yml
+++ b/shippable.yml
@@ -10,7 +10,8 @@ build:
   ci:
     - npm install
     - npm test
-    - cp build/TESTS-*.xml shippable/testresults/
+    - cp build/testresults/TESTS-*.xml shippable/testresults/
+    - cp build/codecoverage/cobertura-coverage.xml shippable/codecoverage/
     - npm run build
   on_success:
     - aws s3 sync build/dist s3://hikes-ui --region eu-west-2 --acl public-read --delete --cache-control "public, no-cache, max-age=43200"
