--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch:test": "npm test -- --auto-watch --no-single-run",
     "start": "babel-node devServer.js",
     "lint": "eslint src",
-    "build": "npm run clean && webpack"
+    "build": "npm run clean && webpack -p"
   },
   "repository": {
     "type": "git",
@@ -54,6 +54,7 @@
     "mocha": "^3.2.0",
     "phantomjs-prebuilt": "^2.1.14",
     "promise-polyfill": "^6.0.2",
+    "redux-devtools-extension": "^1.0.0",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
