--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Hikes UI",
   "scripts": {
     "clean": "rimraf build",
-    "pretest": "npm-run-all clean lint",
+    "pretest": "npm-run-all clean validate-webpack lint",
     "test": "karma start",
     "watch": "npm-run-all --parallel watch:*",
     "watch:test": "npm t -- --no-single-run",
     "watch:lint": "npm run lint -- -w",
     "start": "babel-node devServer.js ",
     "lint": "esw",
+    "validate-webpack": "webpack-validator webpack.config.js",
     "build": "npm run clean && webpack -p"
   },
   "repository": {
@@ -64,6 +65,7 @@
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
     "webpack": "^2.2.0",
-    "webpack-dev-middleware": "^1.2.0"
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-validator": "^2.3.0"
   }
 }
