--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "npm-run-all": "^4.0.1",
     "phantomjs-prebuilt": "^2.1.14",
     "promise-polyfill": "^6.0.2",
+    "react-router-redux": "^4.0.8",
     "redux-devtools-extension": "^1.0.0",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.7",
