--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "^6.3.14",
+    "raleway-webfont": "^3.0.1",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
@@ -40,6 +41,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.3.13",
     "chai": "^3.5.0",
+    "css-loader": "^0.26.1",
     "eslint": "^2.9.0",
     "eslint-config-airbnb": "^8.0.0",
     "eslint-plugin-import": "^1.6.1",
@@ -65,7 +67,9 @@
     "rimraf": "^2.5.4",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
-    "webpack": "^2.2.0",
+    "skeleton-css": "^2.0.4",
+    "style-loader": "^0.13.1",
+    "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-validator": "^2.3.0"
   }
